moving to basic framework

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ venv
 .webassets-cache/
 *.swo
 *.swp
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
